replaced static base url with liquid site.baseurl

--- a/footer.html
+++ b/footer.html
@@ -4,10 +4,10 @@
     <span class="links">
       <span class="wrapper">
 	<span class="footer-link">
-	  <a href="/MUTOR/privacy">Data Privacy</a>
+	  <a href="{{ site.baseurl }}/privacy">Data Privacy</a>
 	</span>
 	<span class="footer-link">
-	  <a href="/MUTOR/contact">Contact</a>
+	  <a href="{{ site.baseurl }}/contact">Contact</a>
 	</span>
       </span>
     </span>
@@ -16,32 +16,32 @@
     <div class="affiliation-logos">
       <div class="affiliation-logo">
 	<a href="https://www.uni-hamburg.de">
-	  <img src="/MUTOR/assets/images/uhh-logo-web.gif" alt="{{ site.title | escape }}" height=76px style="margin-bottom: -10px">
+	  <img src="{{ site.baseurl }}/assets/images/uhh-logo-web.gif" alt="{{ site.title | escape }}" height=76px style="margin-bottom: -10px">
 	</a>
       </div>
       <div class="affiliation-logo">
 	<a href="https://www.mmkh.de">
-	  <img src="/MUTOR/assets/images/mmkh_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  <img src="{{ site.baseurl }}/assets/images/mmkh_logo.png" alt="{{ site.title | escape }}" height=48px>
 	</a>
       </div>
       <div class="affiliation-logo">
 	<a href="https://music.neu.edu">
-	  <img src="/MUTOR/assets/images/nu_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  <img src="{{ site.baseurl }}/assets/images/nu_logo.png" alt="{{ site.title | escape }}" height=48px>
 	</a>
       </div>
       <div class="affiliation-logo">
 	<a href="https://cnmat.berkeley.edu">
-	  <img src="/MUTOR/assets/images/cnmat_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  <img src="{{ site.baseurl }}/assets/images/cnmat_logo.png" alt="{{ site.title | escape }}" height=48px>
 	</a>
       </div>
       <div class="affiliation-logo">
 	<a href="https://www.hoou.de/institutions/hochschule-fur-musik-und-theater">
-	  <img src="/MUTOR/assets/images/hoou_logo.png" alt="{{ site.title | escape }}" height=48px>
+	  <img src="{{ site.baseurl }}/assets/images/hoou_logo.png" alt="{{ site.title | escape }}" height=48px>
 	</a>
       </div>
       <div class="affiliation-logo">
 	<a href="https://www.hfmt-hamburg.de/start/">
-	  <img src="/MUTOR/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" height=80px>
+	  <img src="{{ site.baseurl }}/assets/images/hfmt_logo_black.png" alt="{{ site.title | escape }}" height=80px>
 	</a>
       </div>
     </div>
