changed legal links to remove permalink style

--- a/footer.html
+++ b/footer.html
@@ -4,10 +4,10 @@
     <span class="links">
       <span class="wrapper">
 	<span class="footer-link">
-	  <a href="{{ site.baseurl }}/privacy">Data Privacy</a>
+	  <a href="{{ site.baseurl }}/privacy.html">Data Privacy</a>
 	</span>
 	<span class="footer-link">
-	  <a href="{{ site.baseurl }}/contact">Contact</a>
+	  <a href="{{ site.baseurl }}/contact.html">Contact</a>
 	</span>
       </span>
     </span>
